--- a/Public/css/application.css
+++ b/Public/css/application.css
@@ -38,4 +38,9 @@ html {
     vertical-align: middle;
   }
 
+  /* Search clear (x) icon */
+  input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: searchfield-cancel-button;
+  }
+
   
